tests/http/requests/invalid/prefix_03.py
from web_server.config import MessageConfig
from web_server.errors import InvalidHeader

cfg = MessageConfig.default()
request = InvalidHeader
